Closed Bug 1738160 Opened 4 years ago Closed 4 years ago

Crash in [@ nsMsgLocalMailFolder::CopyData]

Categories

(Thunderbird :: General, defect)

Thunderbird 94
x86
Windows 10
defect

Tracking

(thunderbird_esr91+ fixed)

RESOLVED FIXED
95 Branch
Tracking Status
thunderbird_esr91 + fixed

People

(Reporter: wsmwk, Assigned: mkmelin)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

currently #9 crash for version 94. first appears with buildid 20211004221715, in the crash below. So perhaps a regression. Or maybe a duplicate of a ongoing persistent crash under a different crash signature

Crash report: https://crash-stats.mozilla.org/report/index/78af1195-af3d-46f0-a7c4-80e840211012

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0 xul.dll nsMsgLocalMailFolder::CopyData comm/mailnews/local/src/nsLocalMailFolder.cpp:1942
1 xul.dll nsCopyMessageStreamListener::OnDataAvailable comm/mailnews/base/src/nsCopyMessageStreamListener.cpp:43
2 xul.dll nsMailboxProtocol::ReadMessageResponse comm/mailnews/local/src/nsMailboxProtocol.cpp:583
3 xul.dll nsMailboxProtocol::ProcessProtocolState comm/mailnews/local/src/nsMailboxProtocol.cpp:657
4 xul.dll nsMsgProtocol::OnDataAvailable comm/mailnews/base/src/nsMsgProtocol.cpp:300
5 xul.dll nsInputStreamPump::OnStateTransfer netwerk/base/nsInputStreamPump.cpp:532
6 xul.dll nsInputStreamPump::OnInputStreamReady netwerk/base/nsInputStreamPump.cpp:377
7 xul.dll mozilla::SlicedInputStream::OnInputStreamReady xpcom/io/SlicedInputStream.cpp:419
8 xul.dll nsInputStreamReadyEvent::Run xpcom/io/nsStreamUtils.cpp:94
9 xul.dll mozilla::RunnableTask::Run xpcom/threads/TaskController.cpp:467
Flags: needinfo?(mkmelin+mozilla)
See Also: → 1738162
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/a20ef95c53ef
fix Crash in [@ nsMsgLocalMailFolder::CopyData]. r=benc

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch

Comment on attachment 9248200 [details]
Bug 1738160 - fix Crash in [@ nsMsgLocalMailFolder::CopyData]. r=benc

[Approval Request Comment]
Crash fix, should be safe.

Attachment #9248200 - Flags: approval-comm-esr91?

Comment on attachment 9248200 [details]
Bug 1738160 - fix Crash in [@ nsMsgLocalMailFolder::CopyData]. r=benc

[Triage Comment]
approved for esr91

Attachment #9248200 - Flags: approval-comm-esr91? → approval-comm-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: