Bug 1738160 - fix Crash in [@ nsMsgLocalMailFolder::CopyData]. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D129789

--HG--
extra : rebase_source : 16e576559f3466a6234ce902d3be37b0d7d618f9